# discord-mcp-alert

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  register_claude_cli.sh  run_server.sh  setup.sh
.claude/: settings.json
.claude/hooks/: discord-notify.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: configuration.md  installation.md  pypi-publishing.md
scripts/: register_mcp.py
src/: config.py  main.py  notifier.py  server.py
src/discord_mcp_alert/: config.py  main.py  notifier.py  server.py
tests/: test_notify_tool.py  verify_mcp.py
