[project]
name = "discord-mcp-alert"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for sending Discord notifications."
authors = [
    {name = "VinylStage", email = "mcpe9869@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "mcp (>=1.25.0,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/VinylStage/discord-mcp-alert"
Repository = "https://github.com/VinylStage/discord-mcp-alert"

[project.scripts]
discord-mcp-alert = "src.server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"